Refactoring dvcs.push to reduce number of inspection warnings.